# ev_account_service

./: .env  Cargo.toml  README.md  build.rs  configuration.yaml
.github/workflows/: general.yml
docker/: Dockerfile
migrations/: 1664718752_create_accounts_table.sql
protos/: common.proto  endpoints.proto  signup.proto
scripts/: dev_db_init.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/model/: account.rs  email.rs  mod.rs
src/rpc_endpoints/: account_service_endpoints.rs  health_check.rs  mod.rs  signup.rs
src/storage_ops/: account_ops.rs  mod.rs  storage_manager.rs
tests/: common.rs  health_check.rs  mod.rs  signup.rs
