[package]
name = "ev_account_service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ev_account_service"

[dependencies]
tonic = "0.8.2"
prost = "0.11.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.2"