[package]
name = "ev_account_service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ev_account_service"

[dependencies]
tonic = "0.8.2"
prost = "0.11.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1", features = ["derive"] }
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = { version = "0.4.15", default-features = false }
anyhow = "1.0.66"
thiserror = "1.0.37"
regex = "1.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[build-dependencies]
tonic-build = "0.8.2"